[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Images/GlassRender.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Meeting/LoteryShow.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/goaheadplease.ogg" type="AudioStream" id=3]
[ext_resource path="res://Resources/df_CartoonCookies_label.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Sounds/partecipantchoosed.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/welcometomeeting.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/firstpartecipant.ogg" type="AudioStream" id=7]
[ext_resource path="res://Resources/df_CartoonCookies_mainlabel.tres" type="DynamicFont" id=8]
[ext_resource path="res://Resources/df_CartoonCookies_textboxes.tres" type="DynamicFont" id=9]
[ext_resource path="res://Resources/df_CartoonCookies.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/Gadgets/LightBulbSquare.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Images/ScenarioRender.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Partecipants/ShowPartecipantContainerSquare.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 47.9122, 38.7779 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 57.0344, 25.3441 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 53.5167, 24.4621 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 107.527, 252.968 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 274.246, 40.6069 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.35773, 28.0513 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 54.8842, 5.52704 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 484.878, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20.0067, 83.168 )

[node name="LoteryShowControl" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallsContainer" type="Node2D" parent="."]
position = Vector2( 159.527, 20.4862 )
scale = Vector2( 0.681412, 0.681412 )

[node name="GlassContainerSprite" type="Sprite" parent="BallsContainer"]
position = Vector2( 201.128, 352.133 )
scale = Vector2( 0.806987, 0.806987 )
z_index = 5
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PushUp" type="Area2D" parent="BallsContainer"]
visible = false
position = Vector2( 191.157, 349.972 )
scale = Vector2( 0.343556, 0.85004 )
space_override = 3
gravity_vec = Vector2( 0, -3 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaCollision" type="CollisionShape2D" parent="BallsContainer/PushUp"]
shape = SubResource( 10 )
disabled = true

[node name="PushLeft" type="Area2D" parent="BallsContainer"]
visible = false
position = Vector2( 222.372, 270.332 )
scale = Vector2( 0.343556, 0.85004 )
space_override = 3
gravity_vec = Vector2( -3, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaCollision" type="CollisionShape2D" parent="BallsContainer/PushLeft"]
position = Vector2( 0.402283, -0.0231323 )
shape = SubResource( 9 )
disabled = true

[node name="PushRight" type="Area2D" parent="BallsContainer"]
visible = false
position = Vector2( 156.212, 270.296 )
scale = Vector2( 0.343556, 0.85004 )
space_override = 3
gravity_vec = Vector2( 3, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaCollision" type="CollisionShape2D" parent="BallsContainer/PushRight"]
shape = SubResource( 11 )
disabled = true

[node name="ReturnUpForce" type="Area2D" parent="BallsContainer"]
visible = false
position = Vector2( 184.148, -20.9267 )
scale = Vector2( 0.381897, 0.824545 )
space_override = 3
gravity_vec = Vector2( 0, -1 )
linear_damp = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnUp" type="CollisionShape2D" parent="BallsContainer/ReturnUpForce"]
position = Vector2( 1103.03, 501.031 )
shape = SubResource( 3 )

[node name="ReturnLeftForce" type="Area2D" parent="BallsContainer"]
visible = false
position = Vector2( 157.703, -17.9883 )
scale = Vector2( 0.381897, 0.824545 )
space_override = 3
gravity_vec = Vector2( -1, 0 )
linear_damp = 0.0

[node name="ReturnLeft" type="CollisionShape2D" parent="BallsContainer/ReturnLeftForce"]
position = Vector2( 804.705, 279.096 )
shape = SubResource( 4 )

[node name="ContainerBounds" type="StaticBody2D" parent="BallsContainer"]
visible = false
z_index = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BallsContainer/ContainerBounds"]
position = Vector2( 327.23, 256.26 )
scale = Vector2( 34.2279, 34.8525 )
z_index = 3
polygon = PoolVector2Array( 7.16109, 7.5702, 7.21839, 0.461436, 7.0274, -0.307585, 6.51173, -0.495151, 1.14494, -0.420125, 0.457376, 0.892839, -0.669459, 2.41213, -2.14007, 3.40623, -3.34331, 3.78136, -3.4388, 4.23152, -3.20961, 4.68168, -2.73214, 5.0193, 6.72182, 7.94533 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="BallsContainer/ContainerBounds"]
polygon = PoolVector2Array( 626.239, 517.251, 646.993, 547.345, 643.88, 583.665, 599.258, 596.117, 558.787, 569.137, 559.677, 511.573, 489.52, 489.072, 499.325, 555.097, 521.552, 610.663, 584.962, 640.734, 674.069, 620.338, 688.361, 530.186, 666.373, 499.402, 666.373, 210.256, 601.758, 125.295, 397.568, 117.442, 278.021, 0.512918, 268.423, -83.2572, 210.118, -83.5817, 213.231, 39.9056, 259.928, 57.5466, 323.228, 110.47, 359.548, 185.185, 568.127, 188.298, 594.07, 200.75, 622.088, 243.296 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="BallsContainer/ContainerBounds"]
polygon = PoolVector2Array( 61.5307, -2.29404, -48.4611, 114.691, -69.38, 344.799, 29.9847, 435.012, 150.268, 432.397, 234.83, 426.951, 232.06, 384.703, 158.455, 389.652, 62.0655, 338.391, 22.8425, 262.56, 16.3054, 178.885, 72.5249, 78.2125, 158.177, 33.5988, 156.815, -82.5319, 267.332, -82.6014, 267.332, -132.284, 139.204, -134.899 )

[node name="SelectionBounds" type="StaticBody2D" parent="BallsContainer"]
visible = false
z_index = 3
collision_layer = 1024
collision_mask = 1024
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="BallsContainer/SelectionBounds"]
position = Vector2( 327.23, 256.26 )
scale = Vector2( 34.2279, 34.8525 )
z_index = 3
polygon = PoolVector2Array( 7.16109, 7.5702, 7.21839, 0.461436, 7.0274, -0.307585, 6.51173, -0.495151, 1.14494, -0.420125, 0.457376, 0.892839, -0.669459, 2.41213, -2.14007, 3.40623, -3.2259, 3.79242, -3.27403, 4.26506, -3.05746, 4.71407, -2.73214, 5.0193, 6.92873, 7.80984 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="BallsContainer/SelectionBounds"]
polygon = PoolVector2Array( 422.214, 136.918, 278.021, 0.512918, 268.423, -83.2572, 210.118, -83.5817, 213.231, 39.9056, 259.928, 57.5466, 323.228, 110.47, 359.548, 185.185, 355.535, 289.887, 426.136, 291.194 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="BallsContainer/SelectionBounds"]
polygon = PoolVector2Array( 61.5307, -2.29404, -48.4611, 114.691, -69.38, 344.799, 29.9847, 435.012, 73.13, 510.843, 487.082, 648.427, 711.341, 640.573, 713.959, 439.874, 545.546, 439.002, 561.915, 530.1, 593.54, 519.281, 639.23, 521.113, 655.537, 541.497, 656.702, 574.111, 635.736, 592.747, 580.408, 593.33, 578.079, 584.011, 203.949, 482.841, 164.102, 445.266, 152.571, 391.73, 62.0655, 338.391, 22.8425, 262.56, 16.3054, 178.885, 72.5249, 78.2125, 158.177, 33.5988, 156.815, -82.5319, 267.332, -82.6014, 267.332, -132.284, 139.204, -134.899 )

[node name="ExpulsionChannel" type="StaticBody2D" parent="BallsContainer"]
visible = false
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ExpulsionRoad1" type="CollisionShape2D" parent="BallsContainer/ExpulsionChannel"]
position = Vector2( 640.844, 602.108 )
shape = SubResource( 5 )

[node name="ExpulsionRoad2" type="CollisionShape2D" parent="BallsContainer/ExpulsionChannel"]
position = Vector2( 618.706, 651.554 )
rotation = -0.807029
shape = SubResource( 6 )

[node name="ExpulsionRoad3" type="CollisionShape2D" parent="BallsContainer/ExpulsionChannel"]
position = Vector2( 136.834, 736.998 )
rotation = -0.133326
shape = SubResource( 7 )

[node name="ExpulsionRoad4" type="CollisionShape2D" parent="BallsContainer/ExpulsionChannel"]
position = Vector2( 90.6069, 662.888 )
rotation = -0.133326
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallsContainer/ExpulsionChannel"]
position = Vector2( -334.479, 725.788 )
shape = SubResource( 8 )

[node name="QuickAddLayer" type="CanvasLayer" parent="."]

[node name="QuickAddPartecipant" type="PopupDialog" parent="QuickAddLayer"]
margin_left = 304.0
margin_top = 18.2666
margin_right = 981.0
margin_bottom = 705.267
popup_exclusive = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PartecipantsList" type="ItemList" parent="QuickAddLayer/QuickAddPartecipant"]
margin_left = 46.0
margin_top = 92.0294
margin_right = 630.0
margin_bottom = 635.029
custom_fonts/font = ExtResource( 9 )
custom_constants/vseparation = 0
custom_constants/line_separation = 0
custom_constants/icon_margin = 20
custom_constants/hseparation = 0
allow_reselect = true
fixed_icon_size = Vector2( 60, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuickAddLayer/QuickAddPartecipant"]
margin_left = 20.1716
margin_top = 25.3137
margin_right = 653.172
margin_bottom = 90.3137
custom_fonts/font = ExtResource( 8 )
text = "Scegli un partecipante"
align = 1
valign = 1
uppercase = true

[node name="CancelQuickAdd" type="Button" parent="QuickAddLayer/QuickAddPartecipant"]
margin_left = 274.792
margin_top = 646.82
margin_right = 398.792
margin_bottom = 670.82
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.427451, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.427451, 0, 0, 1 )
text = "Chiudi"
flat = true

[node name="ShowPartecipantContainerSquare" parent="." instance=ExtResource( 14 )]
margin_left = 641.323
margin_top = 125.296
margin_right = 1281.32
margin_bottom = 560.296

[node name="CallNextOneButton" type="Button" parent="."]
margin_left = 806.07
margin_top = 552.771
margin_right = 1205.07
margin_bottom = 608.771
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 0.172549, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.0156863, 0.411765, 0.0784314, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.411765, 0.0784314, 1 )
enabled_focus_mode = 0
text = "AVANTI IL PRIMO!"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SkipPartecipantButton" type="Button" parent="."]
margin_left = 789.058
margin_top = 602.217
margin_right = 1227.06
margin_bottom = 658.217
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.388235, 0, 1 )
custom_colors/font_color_pressed = Color( 0.717647, 0.388235, 0, 1 )
disabled = true
enabled_focus_mode = 0
text = "SALTA QUESTO PARTECIPANTE"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CancelMeetingButton" type="Button" parent="."]
margin_left = 1146.31
margin_top = 689.663
margin_right = 1270.31
margin_bottom = 713.663
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.427451, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.427451, 0, 0, 1 )
enabled_focus_mode = 0
text = "Chiudere meeting"
flat = true
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuickAddButton" type="Button" parent="."]
margin_left = 1087.0
margin_top = 663.0
margin_right = 1271.0
margin_bottom = 687.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 0, 0.529412, 1, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.0470588, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.0470588, 0.466667, 1 )
enabled_focus_mode = 0
text = "Includere un partecipante"
flat = true
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SelectingMusicStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="WelcomeMusicStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="PartecipantNameAudioStream" type="AudioStreamPlayer" parent="."]

[node name="SelectedMusicStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="YouAreTheChoosedOne" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.045

[node name="BackgroundImage" type="Sprite" parent="."]
position = Vector2( 641.859, 360.337 )
scale = Vector2( 0.680353, 0.680353 )
z_index = -1
texture = ExtResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LightBulbs" parent="." instance=ExtResource( 11 )]
position = Vector2( 1033.59, 341.731 )

[connection signal="item_selected" from="QuickAddLayer/QuickAddPartecipant/PartecipantsList" to="." method="_on_PartecipantsList_item_selected"]
[connection signal="pressed" from="QuickAddLayer/QuickAddPartecipant/CancelQuickAdd" to="." method="_on_CancelQuickAdd_pressed"]
[connection signal="pressed" from="CallNextOneButton" to="." method="_on_CallNextOneButton_pressed"]
[connection signal="pressed" from="SkipPartecipantButton" to="." method="_on_CallNextOneButton_pressed" binds= [ true ]]
[connection signal="pressed" from="CancelMeetingButton" to="." method="_on_CancelMeetingButton_pressed"]
[connection signal="pressed" from="QuickAddButton" to="." method="_on_QuickAddButton_pressed"]
[connection signal="finished" from="SelectingMusicStream" to="." method="_on_SelectingMusicStream_finished"]
[connection signal="finished" from="WelcomeMusicStream" to="." method="_on_WelcomeMusicStream_finished"]
[connection signal="finished" from="PartecipantNameAudioStream" to="." method="_on_PartecipantNameAudioStream_finished"]
[connection signal="finished" from="SelectedMusicStream" to="." method="_on_SelectedMusicStream_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
